Log Interface/objects/LogInterfaceItem__c.object
<CustomObject>
    <fields>
        <fullName>ClientSapCode__c</fullName>
        <label>SapCode do Cliente</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>CreatedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ErrorField__c</fullName>
        <label>Campo do Erro</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailDescription__c</fullName>
        <label>FailDescription</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Fields</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdNotFound__c</fullName>
        <label>SapCode Faltando</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InvalidEmail__c</fullName>
        <label>Email Inválido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogInterface__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LogInterface</label>
        <referenceTo>LogInterface__c</referenceTo>
        <relationshipLabel>LogInterfaceItems</relationshipLabel>
        <relationshipName>LogInterfaceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>Objeto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PicklistValue__c</fullName>
        <label>Valor da Picklist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SimpleMessage__c</fullName>
        <label>SimpleMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <label>StatusCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>LogInterfaceItem</label>
    <nameField>
        <label>LogInterfaceItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LogInterfaceItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>